# LLM_Relations

./: .gitignore  .gitmodules  README.md  add_names.py  clients.py  embed.py  extract.py  finetuning_tools.py  llama_parse.ipynb  marker_parse.py  parser.py  paths.py  prompts.py  requirements.txt
llm_extractions/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  brat_utils.py  check_hallucinations.py  clients.py  const.py  converter.py  dataset.py  documents.py  embed.py  examples.py  extract.py  extraction_utils.py  filter_regu.py  finetune.py  generate_graph.py  get_documents.py  graph_utils.py  graphdocs2json.py  langchain_patch.py  llm.py  parse_pdfs.py  parser.py  paths.py  ppi_lookup.py  prompts.py  pyproject.toml  rag_utils.py  regu_names.py  requirements.txt  structured_classes.py  style_templates.py  synonyms.py  templates.py
llm_extractions/baml/baml_src/: clients.baml  judge.baml  names.baml  rel.baml
llm_extractions/data/5curated/: 10.1002_cbin.11716.txt  10.1002_iub.2150.txt  10.1007_s00395-018-0679-9.txt
llm_extractions/data/regulatome/all_entities/: 10048324.txt  10075690.txt  10085129.txt  10189366_50.txt  10195903.txt  10201929.txt  10209036.txt  10221643.txt  10225955_54.txt  10228026.txt  10330189.txt  10347142.txt  10347175.txt  10347217.txt  10357820.txt  10358173.txt  10369255.txt  10373463.txt  10395652.txt  10409763.txt  10430017.txt  10432288.txt  10446169.txt  10446999.txt  10455134.txt  10512884.txt  10514377.txt  10585430.txt  10593883.txt  10598587.txt  10625644.txt  10639338.txt  10660620.txt  10666337.txt  10668096.txt  10684251_43.txt  10704443_5.txt  10706618.txt  10713156.txt  10722742.txt  (+954 more)
llm_extractions/data/regulatome/texts/: 10092233.txt  10225955_54.txt  10330415.txt  10698523.txt  10725331_37.txt  10786633.txt  10949293.txt  10966108.txt  10995389.txt  11054122.txt  11158580.txt  11231878.txt  11250901.txt  11323411.txt  11341840.txt  11432829.txt  11494123.txt  11509652.txt  11566882.txt  11590439.txt  11598127.txt  11694501.txt  11707585.txt  11714749_26.txt  11861468.txt  11877457_16.txt  11909966.txt  11973335.txt  11983168.txt  11994499.txt  11997436.txt  12015973.txt  (+352 more)
(+3152 files in other folders)
