[project]
name = "llm_extraction"
version = "0.1.0"
description = ""
authors = [{ name = "Philipp", email = "philipp.wiesenbach@uni-heidelberg.de" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "ollama (==0.4.8)",
    "annotated-types (==0.7.0)",
    "baml-py (==0.88.0)",
    "bitsandbytes (==0.45.4)",
    "cffi (==1.17.1)",
    "click (==8.2.1)",
    "datasets (==3.4.1)",
    "docstring-parser (==0.16)",
    "gitpython (==3.1.44)",
    "hnswlib (==0.8.0)",
    "huggingface-hub (==0.30.2)",
    "instructor (==1.8.2)",
    "langchain-text-splitters (==0.3.8)",
    "marker (==2.1.3)",
    "matplotlib (==3.10.3)",
    "numpy (==2.2.6)",
    "openai (==1.79.0)",
    "opencv-python-headless (==4.11.0.86)",
    "pandas (==2.2.3)",
    "peft (==0.15.0)",
    "pillow (==11.2.1)",
    "pydantic (==2.11.4)",
    "pyshader (==0.7.0)",
    "pyside6 (==6.9.0)",
    "pytest (==8.3.5)",
    "python-dotenv (==1.1.0)",
    "pyyaml (==6.0.2)",
    "pyyaml (==6.0.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.3)",
    "safetensors (==0.5.3)",
    "seaborn (==0.13.2)",
    "sentencepiece (==0.2.0)",
    "setuptools (==80.0.0)",
    "sphinx-material (==0.0.36)",
    "tabulate (==0.9.0)",
    "torch (==2.7.0)",
    "tqdm (==4.67.1)",
    "transformers (==4.51.3)",
    "trl (==0.15.2)",
    "typing-extensions (==4.13.2)",
    "unsloth-zoo (==2025.5.7)",
    "wandb (==0.19.11)",
    "wget (==3.2)",
    "unsloth (==2025.5.6)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true
line_length=88

[tool.flake8]
ignore ="""
E203, E266, E501, W503
"""
max-line-length = 88
max-complexity = 18
select = """
B,C,E,F,W,T4
"""

[tool.mypy]
files= """
extract.py
"""
ignore_missing_imports=true

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pre-commit = "^4.2.0"

